Issue #115 | Fixed GCI Logo drop by changing ncb (Navbar collapse breakpoint) & M=more... (#127)
* navbar logo fix

* Remove unused code, fixed broken links & more

* Refactored slideshow code

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -23,8 +23,8 @@
 
 
 .buttonRed {
-    background-color: #D11F42; 
-    color: white; 
+    background-color: #D11F42;
+    color: white;
     text-decoration: none;
     transition: all .2s ease-in-out
 }
@@ -35,10 +35,6 @@
 
 
 * {box-sizing: border-box}
-.mySlides {
-    display: none;
-    vertical-align: middle;
-}
 
 
 .slideshow-container {
@@ -156,11 +152,12 @@
   }
 
 .active, .dot:hover {
-  background-color: #bc0f0f; 
+  background-color: #bc0f0f;
 }
 
 
 .fade {
+  vertical-align: middle;
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.0s;
   animation-name: fade;
@@ -184,12 +181,12 @@
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
@@ -320,7 +317,7 @@
     -moz-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
     -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;    
+    transition: all .2s ease-in;
 }
 
 .project-sec h2{
@@ -338,7 +335,7 @@
     -moz-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
     -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;    
+    transition: all .2s ease-in;
 }
 
 
@@ -777,7 +774,7 @@ figure.effect-gcihover:hover figcaption::before {
 
 .navbar-brand {
     margin-top: -7px;
-    
+
 }
 
 .navbar-nav {
@@ -787,8 +784,8 @@ figure.effect-gcihover:hover figcaption::before {
 
 .navbar-jboss-logo {
     height: 60px;
-    margin-top: 7px; 
-    margin-left: 20px;  
+    margin-top: 7px;
+    margin-left: 20px;
 }
 
 .ribbon {
@@ -913,8 +910,8 @@ body {
     margin-top: 40px;
 }
 
-.social-icons .fab , .social-icons .fas {  
-    color: #808080; 
+.social-icons .fab , .social-icons .fas {
+    color: #808080;
     margin-left: 40px;
 }
 
@@ -943,8 +940,8 @@ body {
     font-size: 16px;
 }
 
-.content {  
-    word-wrap: break-word; 
+.content {
+    word-wrap: break-word;
 }
 
 .brand-logo {
@@ -953,21 +950,21 @@ body {
 
 .project-links, .quick-links {
     text-decoration: none;
-    color: #8c8c8c; 
+    color: #8c8c8c;
 }
 
 .project-links:hover, .quick-links:hover {
     text-decoration: none;
-    color: #ffffff;  
+    color: #ffffff;
 }
 
-.social-icons .fab , .social-icons .fab:hover, 
-.social-icons .fas , .social-icons .fas:hover, i , 
-.project-links , .project-links:hover , 
+.social-icons .fab , .social-icons .fab:hover,
+.social-icons .fas , .social-icons .fas:hover, i ,
+.project-links , .project-links:hover ,
 .quick-links , .quick-links:hover {
     -webkit-transition: 0.5s ;
     -moz-transition: 0.5s ;
-    -o-transition:  0.5s ;  
+    -o-transition:  0.5s ;
     transition: 0.5s ;
 }
 
@@ -999,9 +996,9 @@ body {
     margin-left: 25px;
 }
 
-.social-icons .fa-facebook-square, 
-.social-icons .fa-twitter-square, 
-.social-icons .fa-github-square, 
+.social-icons .fa-facebook-square,
+.social-icons .fa-twitter-square,
+.social-icons .fa-github-square,
 .social-icons .fa-rss-square {
     font-size: 50px;
 }
@@ -1014,54 +1011,54 @@ body {
 
 @media (min-width: 320px) and (max-width: 480px){
 
-  .buttonStyle {    
+  .buttonStyle {
     padding: 5px 10px;
-    text-align: center;    
+    text-align: center;
     font-size: 12px;
-    margin: 4px 2px;   
+    margin: 4px 2px;
   }
 
-  .slideshow-container {    
+  .slideshow-container {
     margin-top: 55px;
   }
 
-  .headingText {    
-    font-size: 26px;    
-    padding: 8px 12px;    
+  .headingText {
+    font-size: 26px;
+    padding: 8px 12px;
     width: 75%;
-    bottom: 8px;    
+    bottom: 8px;
     margin-bottom: 130px;
   }
 
-  .headingCode {   
-    font-size: 14px;      
+  .headingCode {
+    font-size: 14px;
     width: 50%;
     bottom: 8px;
-    text-align: center;   
+    text-align: center;
     margin-bottom: 30px;
   }
 
   .prev, .next {
-    top: 50%;    
+    top: 50%;
     padding: 10px;
     margin-top: -22px;
     margin-left: 2px;
-    margin-right: 2px;    
+    margin-right: 2px;
     font-size: 24px;
   }
 
   .text {
-    font-size: 20px;    
+    font-size: 20px;
     width: 30%;
-    bottom: 10px;    
+    bottom: 10px;
   }
 
-  .dot {    
+  .dot {
     height: 10px;
     width: 10px;
-    margin: 0 2px;    
-    border-radius: 50%;    
-  }  
+    margin: 0 2px;
+    border-radius: 50%;
+  }
 
   .project-links, .quick-links {
     text-align: center;
@@ -1079,9 +1076,9 @@ body {
   .social-icons {
     font-size: 10px;
   }
-  .social-icons .fa-facebook-square, 
-  .social-icons .fa-twitter-square, 
-  .social-icons .fa-github-square, 
+  .social-icons .fa-facebook-square,
+  .social-icons .fa-twitter-square,
+  .social-icons .fa-github-square,
   .social-icons .fa-rss-square {
     font-size: 40px;
     margin-left: 20px;
@@ -1090,23 +1087,23 @@ body {
   .social-icons .fa-gitter {
     font-size: 40px;
     margin-left: 20px;
-  }  
+  }
 }
 
 /*For tablets*/
 
 @media(min-width: 480px) and (max-width: 767px){
- 
+
    .navbar-jboss-logo{
     height: 45px;
-    margin-top: 1px; 
-    margin-left: 10px; 
-    
+    margin-top: 1px;
+    margin-left: 10px;
+
   }
 
   .navbar-brand {
     margin-top: -15px;
-    
+
   }
 
   .navbar-nav {
@@ -1114,54 +1111,54 @@ body {
     margin-top: 20px;
   }
 
-  .buttonStyle {    
+  .buttonStyle {
     padding: 10px 15px;
-    text-align: center;    
+    text-align: center;
     font-size: 12px;
-    margin: 4px 2px;   
+    margin: 4px 2px;
   }
 
-  .slideshow-container {    
+  .slideshow-container {
     margin-top: 55px;
   }
 
-  .headingText {    
-    font-size: 32px;    
-    padding: 8px 12px;    
+  .headingText {
+    font-size: 32px;
+    padding: 8px 12px;
     width: 75%;
-    bottom: 8px;    
+    bottom: 8px;
     margin-bottom: 250px;
   }
 
-  .headingCode {   
-    font-size: 16px;      
+  .headingCode {
+    font-size: 16px;
     width: 50%;
     bottom: 8px;
-    text-align: center;   
+    text-align: center;
     margin-bottom: 120px;
   }
 
   .prev, .next {
-    top: 50%;    
+    top: 50%;
     padding: 14px;
     margin-top: -22px;
     margin-left: 2px;
-    margin-right: 2px;    
+    margin-right: 2px;
     font-size: 22px;
   }
 
   .text {
-    font-size: 20px;    
+    font-size: 20px;
     width: 30%;
-    bottom: 10px;    
+    bottom: 10px;
   }
 
-  .dot {    
+  .dot {
     height: 12px;
     width: 12px;
-    margin: 0 2px;    
-    border-radius: 50%;    
-  }  
+    margin: 0 2px;
+    border-radius: 50%;
+  }
 
   .project-links, .quick-links {
     text-align: center;
@@ -1174,9 +1171,9 @@ body {
   .social-icons {
     font-size: 10px;
   }
-  .social-icons .fa-facebook-square, 
-  .social-icons .fa-twitter-square, 
-  .social-icons .fa-github-square, 
+  .social-icons .fa-facebook-square,
+  .social-icons .fa-twitter-square,
+  .social-icons .fa-github-square,
   .social-icons .fa-rss-square {
     font-size: 45px;
     margin-left: 30px;
@@ -1185,5 +1182,5 @@ body {
   .social-icons .fa-gitter {
     font-size: 45px;
     margin-left: 30px;
-  }  
+  }
 }
